Updated properties file

--- a/properties/ludo.properties
+++ b/properties/ludo.properties
@@ -2,9 +2,8 @@ API_KEY_LUDO=QUl6YVN5QXVsVnpVR3E1RWYwQTliZnFHSEo2T1F3MmJEUWcySHgw
 LONG_NAME_LUDO=Ludo Thorn
 SHORT_NAME_LUDO=Ludo
 CHANNELS_LUDO=[\
-  {\\"channelName\\"=\\"Ludo Thorn\\", \\"channelUsername\\": \\"ludothorndoppiaggio\\", \\"backGroundColor\\":\\"ORANGE\\"},\
-  {\\"channelName\\"=\\"Ludo Masterrace\\", \\"id\\": \\"UCAmxcLPY_gvUm_XzDIcB0wg\\", \\"backGroundColor\\":\\"YELLOW\\"},\
-  {\\"channelName\\"=\\"Cartolaio Difettoso\\",\\"id\\": \\"UCVDONqN3W6R3KeR6sV0OFxQ\\", \\"backGroundColor\\":\\"ORANGE\\"}\
+  {\\"channelName\\":\\"Ludo Thorn\\", \\"channelUsername\\": \\"ludothorndoppiaggio\\", \\"backGroundColor\\":\\"ORANGE\\"},\
+  {\\"channelName\\":\\"Ludo Masterrace\\", \\"id\\": \\"UCAmxcLPY_gvUm_XzDIcB0wg\\", \\"backGroundColor\\":\\"YELLOW\\"}
   ]
 SOCIAL_LUDO=[\
   {\\"socialImageIndex\\": 0, \\"url\\": \\"https://www.facebook.com/LudoThorn\\"},\
@@ -12,7 +11,7 @@ SOCIAL_LUDO=[\
   {\\"socialImageIndex\\": 2, \\"url\\": \\"https://t.me/LudoThornChannel\\"}\
   ]
 ALTRI_SOCIAL_LUDO=[\
-  {\\"socialImageIndex\\": 2, \\"url\\": \\"https://t.me/addstickers/GattoLudo\\", \\"title\\": \\"Stickers GattoLudo\\"}\
+  {\\"socialImageIndex\\": 2, \\"url\\": \\"https://t.me/addstickers/PupiOfficialPack\\", \\"title\\": \\"Stickers GattoLudo\\"}\
   ]
 MAIN_CHANNEL_LINK_LUDO=https://www.youtube.com/c/ludothorn
 MAIL_PERSONALE_LUDO=miticludus@gmail.com
